Bug 1328672: Support date format with only two time zone digits. r=anba

Some programs seems to have this date format as the default output and
it is a format supported by chrome as well.

Differential Revision: https://phabricator.services.mozilla.com/D122146